Bug 143056 - [EMF+] StringFormat Tracking is not supported
Summary: [EMF+] StringFormat Tracking is not supported
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:26.8.0
Keywords:
Depends on:
Blocks: EMF-WMF
  Show dependency treegraph
 
Reported: 2021-06-25 01:36 UTC by Valek Filippov
Modified: 2026-05-08 19:43 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
EMF sample with StringFormat tracking set to 1.5 (916 bytes, image/x-emf)
2021-06-25 01:37 UTC, Valek Filippov
Details
Screenshot of the sample opened in LO7.3alpha and MS Paint (5.42 KB, image/png)
2021-06-25 01:38 UTC, Valek Filippov
Details
Sample image after fix (208.76 KB, image/png)
2026-05-08 19:43 UTC, Bartosz
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Valek Filippov 2021-06-25 01:36:22 UTC
Description:
LO seems to ignore tracking value of StringFormat

Steps to Reproduce:
Open attached EMF sample.

Actual Results:
LO shows three lines of text with normal spreading of the characters.

Expected Results:
These lines should have wide spaces between characters to almost touch thin vertical red lines.


Reproducible: Always


User Profile Reset: No



Additional Info:
Looks like the actual extent of the text block includes a space after the last character. Because of that  "HRVT" string has a gap on the right.
Comment 1 Valek Filippov 2021-06-25 01:37:15 UTC
Created attachment 173184 [details]
EMF sample with StringFormat tracking set to 1.5
Comment 2 Valek Filippov 2021-06-25 01:38:48 UTC
Created attachment 173185 [details]
Screenshot of the sample opened in LO7.3alpha and MS Paint
Comment 3 QA Administrators 2023-07-15 03:13:18 UTC Comment hidden (obsolete)
Comment 4 QA Administrators 2025-07-15 03:11:42 UTC Comment hidden (obsolete)
Comment 5 Commit Notification 2026-05-06 07:37:57 UTC
Andras Timar committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/60c4f98cee22506e677dbd7baf8f3003951748f6

tdf#143056 EMF+: honor StringFormat tracking when drawing strings

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Bartosz 2026-05-08 19:43:35 UTC
Created attachment 206991 [details]
Sample image after fix

It is working perfectly fine after fix.
Thanks!