engine/drawinglayer/source/tools/emfphelperdata.cxx
@@ -1697,6 +1697,7 @@ namespace emfplushelper
                         css::lang::Locale locale;
                         double stringAlignmentHorizontalOffset = 0.0;
                         double stringAlignmentVerticalOffset = font->emSize;
+                        std::vector<double> aDXArray;
                         if (stringFormat)
                         {
                             LanguageTag aLanguageTag(static_cast<LanguageType>(stringFormat->language));
@@ -1707,6 +1708,18 @@ namespace emfplushelper
                                 font->emSize, locale);
 
                             double fTextWidth = aTextLayouter.getTextWidth(text, 0, stringLength);
+
+                            // Apply character spacing (tracking).  Tracking is a multiplier on
+                            // each character's natural advance; default 1.0 means no change.
+                            if (stringFormat->tracking != 1.0f && stringLength > 0)
+                            {
+                                aDXArray = aTextLayouter.getTextArray(text, 0, stringLength);
+                                for (double& rPos : aDXArray)
+                                    rPos *= stringFormat->tracking;
+                                if (!aDXArray.empty())
+                                    fTextWidth = aDXArray.back();
+                            }
+
                             SAL_WARN_IF(stringFormat->DirectionRightToLeft(), "drawinglayer.emf",
                                         "EMF+\t DrawString Alignment TODO For a right-to-left layout rectangle, the origin should be at the upper right.");
                             if (stringFormat->stringAlignment == StringAlignmentNear)
@@ -1773,7 +1786,6 @@ namespace emfplushelper
 
                         if (color.GetAlpha() > 0)
                         {
-                            std::vector<double> emptyVector;
                             rtl::Reference<drawinglayer::primitive2d::BasePrimitive2D> pBaseText;
                             if (font->Underline() || font->Strikeout())
                             {
@@ -1782,7 +1794,7 @@ namespace emfplushelper
                                             text,
                                             0,             // text always starts at 0
                                             stringLength,
-                                            std::move(emptyVector),   // EMF-PLUS has no DX-array
+                                            std::move(aDXArray),
                                             {},
                                             std::move(fontAttribute),
                                             locale,
@@ -1805,7 +1817,7 @@ namespace emfplushelper
                                             text,
                                             0,             // text always starts at 0
                                             stringLength,
-                                            std::move(emptyVector),   // EMF-PLUS has no DX-array
+                                            std::move(aDXArray),
                                             {},
                                             std::move(fontAttribute),
                                             std::move(locale),
